--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,8 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.5.0"
-  }
+  "devDependencies": {}
 }
