--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "seed": "node seed.js"
+    "seed": "node config/seed.js"
   },
   "author": "",
   "license": "ISC",
