--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,8 @@
     "sequelize": "^6.5.0"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1"
   }
 }
