--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "fontsource-roboto": "^4.0.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
