--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "node-env-file": "^0.1.8",
     "nodemailer": "^6.5.0"
   }
 }
