--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
     "material-ui-image": "^3.3.1",
+    "node-env-file": "^0.1.8",
     "notistack": "^1.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
